# ComfyUI-Img2PaintingAssistant

./: README.md  __init__.py  image_to_painting_node.py  pyproject.toml  requirements.txt
comfyWorkflows/: ImagePainter&ShapenerCartoonImgWorkflow.json  ImagePainter&ShapenerCartoonVidWorkflow.json  Vid2CartoonWtInspyrenetAssitant.json  _Vid2CartoonWtInspyrenetAssitant2.json  img2Cartoon.json  img2CartoonWtRemBg.json  img2PaintingDrawingCartoonSharpened.json  img2imgSharps.json  img2paintingVid.json  inspyrenet-rembg-basic-workflow.json  vid2vidSharps.json
